// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`BattleCardGame > Test custom environment stack 1`] = `
{
  "Outputs": {
    "environment": {
      "Value": "dev",
    },
    "frontendBucketName": {
      "Value": {
        "Fn::GetAtt": [
          "FrontendDeploymentNestedStackFrontendDeploymentNestedStackResourceCF205732",
          "Outputs.customprojectdevFrontendDeploymentBucket628258F1Ref",
        ],
      },
    },
    "frontendDistributionId": {
      "Value": {
        "Fn::GetAtt": [
          "FrontendDeploymentNestedStackFrontendDeploymentNestedStackResourceCF205732",
          "Outputs.customprojectdevFrontendDeploymentFrontendDistributionC35B973CRef",
        ],
      },
    },
    "frontendDomainName": {
      "Value": "dev.my.custom.domain",
    },
    "gitVersion": {
      "Value": "jfijsdf",
    },
    "graphqlEndpoint": {
      "Value": "https://api.dev.my.custom.domain/graphql",
    },
    "identityPoolId": {
      "Value": {
        "Fn::GetAtt": [
          "AuthNestedStackAuthNestedStackResource7067002B",
          "Outputs.customprojectdevAuthAuthIdentityPoolC5B034A1Ref",
        ],
      },
    },
    "project": {
      "Value": "custom-project-dev",
    },
    "region": {
      "Value": {
        "Ref": "AWS::Region",
      },
    },
    "userPoolDomainName": {
      "Value": "id.dev.my.custom.domain",
    },
    "userPoolId": {
      "Value": {
        "Fn::GetAtt": [
          "AuthNestedStackAuthNestedStackResource7067002B",
          "Outputs.customprojectdevAuthAuthUserPool3AE3DA58Ref",
        ],
      },
    },
    "userPoolWebClientId": {
      "Value": {
        "Fn::GetAtt": [
          "AuthNestedStackAuthNestedStackResource7067002B",
          "Outputs.customprojectdevAuthAuthUserPoolAuthUserPoolClient2E8A44F1Ref",
        ],
      },
    },
    "version": {
      "Value": "[VERSION REMOVED]",
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "ApiNestedStackApiNestedStackResourceD6AA1271": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "AuthNestedStackAuthNestedStackResource7067002B",
        "GameNestedStackGameNestedStackResource8CB64513",
        "NotificationApiNestedStackNotificationApiNestedStackResource2E9CC549",
      ],
      "Properties": {
        "Parameters": {
          "referencetocustomprojectdevAuthNestedStackAuthNestedStackResource9013A14EOutputscustomprojectdevAuthAuthGraphqlApi2E823981ApiId": {
            "Fn::GetAtt": [
              "AuthNestedStackAuthNestedStackResource7067002B",
              "Outputs.customprojectdevAuthAuthGraphqlApi2E823981ApiId",
            ],
          },
          "referencetocustomprojectdevAuthNestedStackAuthNestedStackResource9013A14EOutputscustomprojectdevAuthAuthUserPool3AE3DA58Ref": {
            "Fn::GetAtt": [
              "AuthNestedStackAuthNestedStackResource7067002B",
              "Outputs.customprojectdevAuthAuthUserPool3AE3DA58Ref",
            ],
          },
          "referencetocustomprojectdevBaseNestedStackBaseNestedStackResource83DF6379OutputscustomprojectdevBaseCertificateCertificateRequestorResource017B46B5Arn": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.customprojectdevBaseCertificateCertificateRequestorResource017B46B5Arn",
            ],
          },
          "referencetocustomprojectdevGameNestedStackGameNestedStackResource308EB04AOutputscustomprojectdevGameGameGraphqlApi283590E1ApiId": {
            "Fn::GetAtt": [
              "GameNestedStackGameNestedStackResource8CB64513",
              "Outputs.customprojectdevGameGameGraphqlApi283590E1ApiId",
            ],
          },
          "referencetocustomprojectdevNotificationApiNestedStackNotificationApiNestedStackResource5FAD56D9OutputscustomprojectdevNotificationApiNotificationGraphQLApi9EF09A07ApiId": {
            "Fn::GetAtt": [
              "NotificationApiNestedStackNotificationApiNestedStackResource2E9CC549",
              "Outputs.customprojectdevNotificationApiNotificationGraphQLApi9EF09A07ApiId",
            ],
          },
        },
        "Tags": [
          {
            "Key": "Project",
            "Value": "custom-project-dev",
          },
        ],
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.",
              {
                "Ref": "AWS::Region",
              },
              ".",
              {
                "Ref": "AWS::URLSuffix",
              },
              "/",
              {
                "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
              },
              "/[FILENAME REMOVED]",
            ],
          ],
        },
      },
      "Type": "AWS::CloudFormation::Stack",
      "UpdateReplacePolicy": "Delete",
    },
    "AuthNestedStackAuthNestedStackResource7067002B": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "FrontendDeploymentNestedStackFrontendDeploymentNestedStackResourceCF205732",
      ],
      "Properties": {
        "Parameters": {
          "referencetocustomprojectdevBaseNestedStackBaseNestedStackResource83DF6379OutputscustomprojectdevBaseCertificateCertificateRequestorResource017B46B5Arn": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.customprojectdevBaseCertificateCertificateRequestorResource017B46B5Arn",
            ],
          },
          "referencetocustomprojectdevBaseNestedStackBaseNestedStackResource83DF6379OutputscustomprojectdevBaseTable813F1332Arn": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.customprojectdevBaseTable813F1332Arn",
            ],
          },
          "referencetocustomprojectdevBaseNestedStackBaseNestedStackResource83DF6379OutputscustomprojectdevBaseTable813F1332Ref": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.customprojectdevBaseTable813F1332Ref",
            ],
          },
        },
        "Tags": [
          {
            "Key": "Project",
            "Value": "custom-project-dev",
          },
        ],
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.",
              {
                "Ref": "AWS::Region",
              },
              ".",
              {
                "Ref": "AWS::URLSuffix",
              },
              "/",
              {
                "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
              },
              "/[FILENAME REMOVED]",
            ],
          ],
        },
      },
      "Type": "AWS::CloudFormation::Stack",
      "UpdateReplacePolicy": "Delete",
    },
    "BaseNestedStackBaseNestedStackResourceAA4BD9B7": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Tags": [
          {
            "Key": "Project",
            "Value": "custom-project-dev",
          },
        ],
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.",
              {
                "Ref": "AWS::Region",
              },
              ".",
              {
                "Ref": "AWS::URLSuffix",
              },
              "/",
              {
                "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
              },
              "/[FILENAME REMOVED]",
            ],
          ],
        },
      },
      "Type": "AWS::CloudFormation::Stack",
      "UpdateReplacePolicy": "Delete",
    },
    "FrontendDeploymentNestedStackFrontendDeploymentNestedStackResourceCF205732": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Parameters": {
          "referencetocustomprojectdevBaseNestedStackBaseNestedStackResource83DF6379OutputscustomprojectdevBaseCertificateCertificateRequestorResource017B46B5Arn": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.customprojectdevBaseCertificateCertificateRequestorResource017B46B5Arn",
            ],
          },
        },
        "Tags": [
          {
            "Key": "Project",
            "Value": "custom-project-dev",
          },
        ],
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.",
              {
                "Ref": "AWS::Region",
              },
              ".",
              {
                "Ref": "AWS::URLSuffix",
              },
              "/",
              {
                "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
              },
              "/[FILENAME REMOVED]",
            ],
          ],
        },
      },
      "Type": "AWS::CloudFormation::Stack",
      "UpdateReplacePolicy": "Delete",
    },
    "GameNestedStackGameNestedStackResource8CB64513": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Parameters": {
          "referencetocustomprojectdevAuthNestedStackAuthNestedStackResource9013A14EOutputscustomprojectdevAuthAuthUserPool3AE3DA58Ref": {
            "Fn::GetAtt": [
              "AuthNestedStackAuthNestedStackResource7067002B",
              "Outputs.customprojectdevAuthAuthUserPool3AE3DA58Ref",
            ],
          },
          "referencetocustomprojectdevBaseNestedStackBaseNestedStackResource83DF6379OutputscustomprojectdevBaseEventBusD025405EArn": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.customprojectdevBaseEventBusD025405EArn",
            ],
          },
          "referencetocustomprojectdevBaseNestedStackBaseNestedStackResource83DF6379OutputscustomprojectdevBaseEventBusD025405ERef": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.customprojectdevBaseEventBusD025405ERef",
            ],
          },
          "referencetocustomprojectdevBaseNestedStackBaseNestedStackResource83DF6379OutputscustomprojectdevBaseTable813F1332Arn": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.customprojectdevBaseTable813F1332Arn",
            ],
          },
          "referencetocustomprojectdevBaseNestedStackBaseNestedStackResource83DF6379OutputscustomprojectdevBaseTable813F1332Ref": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.customprojectdevBaseTable813F1332Ref",
            ],
          },
        },
        "Tags": [
          {
            "Key": "Project",
            "Value": "custom-project-dev",
          },
        ],
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.",
              {
                "Ref": "AWS::Region",
              },
              ".",
              {
                "Ref": "AWS::URLSuffix",
              },
              "/",
              {
                "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
              },
              "/[FILENAME REMOVED]",
            ],
          ],
        },
      },
      "Type": "AWS::CloudFormation::Stack",
      "UpdateReplacePolicy": "Delete",
    },
    "NotificationApiNestedStackNotificationApiNestedStackResource2E9CC549": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Parameters": {
          "referencetocustomprojectdevAuthNestedStackAuthNestedStackResource9013A14EOutputscustomprojectdevAuthAuthUserPool3AE3DA58Ref": {
            "Fn::GetAtt": [
              "AuthNestedStackAuthNestedStackResource7067002B",
              "Outputs.customprojectdevAuthAuthUserPool3AE3DA58Ref",
            ],
          },
          "referencetocustomprojectdevBaseNestedStackBaseNestedStackResource83DF6379OutputscustomprojectdevBaseTable813F1332Arn": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.customprojectdevBaseTable813F1332Arn",
            ],
          },
          "referencetocustomprojectdevBaseNestedStackBaseNestedStackResource83DF6379OutputscustomprojectdevBaseTable813F1332Ref": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.customprojectdevBaseTable813F1332Ref",
            ],
          },
        },
        "Tags": [
          {
            "Key": "Project",
            "Value": "custom-project-dev",
          },
        ],
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.",
              {
                "Ref": "AWS::Region",
              },
              ".",
              {
                "Ref": "AWS::URLSuffix",
              },
              "/",
              {
                "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
              },
              "/[FILENAME REMOVED]",
            ],
          ],
        },
      },
      "Type": "AWS::CloudFormation::Stack",
      "UpdateReplacePolicy": "Delete",
    },
    "NotificationNestedStackNotificationNestedStackResourceF21A29FE": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Parameters": {
          "referencetocustomprojectdevApiNestedStackApiNestedStackResource00E6F085OutputscustomprojectdevApiMergedGraphqlApi752BC6A3ApiId": {
            "Fn::GetAtt": [
              "ApiNestedStackApiNestedStackResourceD6AA1271",
              "Outputs.customprojectdevApiMergedGraphqlApi752BC6A3ApiId",
            ],
          },
          "referencetocustomprojectdevBaseNestedStackBaseNestedStackResource83DF6379OutputscustomprojectdevBaseEventBusD025405ERef": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.customprojectdevBaseEventBusD025405ERef",
            ],
          },
        },
        "Tags": [
          {
            "Key": "Project",
            "Value": "custom-project-dev",
          },
        ],
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.",
              {
                "Ref": "AWS::Region",
              },
              ".",
              {
                "Ref": "AWS::URLSuffix",
              },
              "/",
              {
                "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
              },
              "/[FILENAME REMOVED]",
            ],
          ],
        },
      },
      "Type": "AWS::CloudFormation::Stack",
      "UpdateReplacePolicy": "Delete",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`BattleCardGame > Test default stack 1`] = `
{
  "Outputs": {
    "frontendBucketName": {
      "Value": {
        "Fn::GetAtt": [
          "AmplifyNestedStackAmplifyNestedStackResource5B287FD0",
          "Outputs.battlecardgameAmplifyConfigBucket27D3842ARef",
        ],
      },
    },
    "frontendDistributionId": {
      "Value": {
        "Fn::GetAtt": [
          "AmplifyNestedStackAmplifyNestedStackResource5B287FD0",
          "Outputs.battlecardgameAmplifyConfigDistribution402B7180Ref",
        ],
      },
    },
    "frontendDomainName": {
      "Value": "battlecardgame.net",
    },
    "graphqlEndpoint": {
      "Value": "https://api.battlecardgame.net/graphql",
    },
    "identityPoolId": {
      "Value": {
        "Fn::GetAtt": [
          "AuthNestedStackAuthNestedStackResource7067002B",
          "Outputs.battlecardgameAuthAuthIdentityPool99588E5ARef",
        ],
      },
    },
    "identityProviders": {
      "Value": "{"custom":[],"social":["amazon","google"]}",
    },
    "project": {
      "Value": "battle-card-game",
    },
    "region": {
      "Value": {
        "Ref": "AWS::Region",
      },
    },
    "userPoolDomainName": {
      "Value": "id.battlecardgame.net",
    },
    "userPoolId": {
      "Value": {
        "Fn::GetAtt": [
          "AuthNestedStackAuthNestedStackResource7067002B",
          "Outputs.battlecardgameAuthAuthUserPool0B3BBFCFRef",
        ],
      },
    },
    "userPoolWebClientId": {
      "Value": {
        "Fn::GetAtt": [
          "AuthNestedStackAuthNestedStackResource7067002B",
          "Outputs.battlecardgameAuthAuthUserPoolAuthUserPoolClient632D86D7Ref",
        ],
      },
    },
    "version": {
      "Value": "[VERSION REMOVED]",
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "AmplifyNestedStackAmplifyNestedStackResource5B287FD0": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Parameters": {
          "referencetobattlecardgameAWSStackId": {
            "Ref": "AWS::StackId",
          },
          "referencetobattlecardgameBaseNestedStackBaseNestedStackResource1E789958OutputsbattlecardgameBaseCertificateCertificateRequestorResource6264BA40Arn": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.battlecardgameBaseCertificateCertificateRequestorResource6264BA40Arn",
            ],
          },
        },
        "Tags": [
          {
            "Key": "Project",
            "Value": "battle-card-game",
          },
        ],
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.",
              {
                "Ref": "AWS::Region",
              },
              ".",
              {
                "Ref": "AWS::URLSuffix",
              },
              "/",
              {
                "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
              },
              "/[FILENAME REMOVED]",
            ],
          ],
        },
      },
      "Type": "AWS::CloudFormation::Stack",
      "UpdateReplacePolicy": "Delete",
    },
    "ApiNestedStackApiNestedStackResourceD6AA1271": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "AuthNestedStackAuthNestedStackResource7067002B",
        "GameNestedStackGameNestedStackResource8CB64513",
        "NotificationApiNestedStackNotificationApiNestedStackResource2E9CC549",
      ],
      "Properties": {
        "Parameters": {
          "referencetobattlecardgameAuthNestedStackAuthNestedStackResource1DBFEE78OutputsbattlecardgameAuthAuthGraphqlApi61CF77AFApiId": {
            "Fn::GetAtt": [
              "AuthNestedStackAuthNestedStackResource7067002B",
              "Outputs.battlecardgameAuthAuthGraphqlApi61CF77AFApiId",
            ],
          },
          "referencetobattlecardgameAuthNestedStackAuthNestedStackResource1DBFEE78OutputsbattlecardgameAuthAuthUserPool0B3BBFCFRef": {
            "Fn::GetAtt": [
              "AuthNestedStackAuthNestedStackResource7067002B",
              "Outputs.battlecardgameAuthAuthUserPool0B3BBFCFRef",
            ],
          },
          "referencetobattlecardgameBaseNestedStackBaseNestedStackResource1E789958OutputsbattlecardgameBaseCertificateCertificateRequestorResource6264BA40Arn": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.battlecardgameBaseCertificateCertificateRequestorResource6264BA40Arn",
            ],
          },
          "referencetobattlecardgameGameNestedStackGameNestedStackResource99E778ABOutputsbattlecardgameGameGameGraphqlApiA45E7D88ApiId": {
            "Fn::GetAtt": [
              "GameNestedStackGameNestedStackResource8CB64513",
              "Outputs.battlecardgameGameGameGraphqlApiA45E7D88ApiId",
            ],
          },
          "referencetobattlecardgameNotificationApiNestedStackNotificationApiNestedStackResource46F56662OutputsbattlecardgameNotificationApiNotificationGraphQLApi26B660ACApiId": {
            "Fn::GetAtt": [
              "NotificationApiNestedStackNotificationApiNestedStackResource2E9CC549",
              "Outputs.battlecardgameNotificationApiNotificationGraphQLApi26B660ACApiId",
            ],
          },
        },
        "Tags": [
          {
            "Key": "Project",
            "Value": "battle-card-game",
          },
        ],
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.",
              {
                "Ref": "AWS::Region",
              },
              ".",
              {
                "Ref": "AWS::URLSuffix",
              },
              "/",
              {
                "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
              },
              "/[FILENAME REMOVED]",
            ],
          ],
        },
      },
      "Type": "AWS::CloudFormation::Stack",
      "UpdateReplacePolicy": "Delete",
    },
    "AuthNestedStackAuthNestedStackResource7067002B": {
      "DeletionPolicy": "Delete",
      "DependsOn": [
        "AmplifyNestedStackAmplifyNestedStackResource5B287FD0",
      ],
      "Properties": {
        "Parameters": {
          "referencetobattlecardgameBaseNestedStackBaseNestedStackResource1E789958OutputsbattlecardgameBaseCertificateCertificateRequestorResource6264BA40Arn": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.battlecardgameBaseCertificateCertificateRequestorResource6264BA40Arn",
            ],
          },
          "referencetobattlecardgameBaseNestedStackBaseNestedStackResource1E789958OutputsbattlecardgameBaseTable94EF26D2Arn": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.battlecardgameBaseTable94EF26D2Arn",
            ],
          },
          "referencetobattlecardgameBaseNestedStackBaseNestedStackResource1E789958OutputsbattlecardgameBaseTable94EF26D2Ref": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.battlecardgameBaseTable94EF26D2Ref",
            ],
          },
        },
        "Tags": [
          {
            "Key": "Project",
            "Value": "battle-card-game",
          },
        ],
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.",
              {
                "Ref": "AWS::Region",
              },
              ".",
              {
                "Ref": "AWS::URLSuffix",
              },
              "/",
              {
                "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
              },
              "/[FILENAME REMOVED]",
            ],
          ],
        },
      },
      "Type": "AWS::CloudFormation::Stack",
      "UpdateReplacePolicy": "Delete",
    },
    "BaseNestedStackBaseNestedStackResourceAA4BD9B7": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Tags": [
          {
            "Key": "Project",
            "Value": "battle-card-game",
          },
        ],
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.",
              {
                "Ref": "AWS::Region",
              },
              ".",
              {
                "Ref": "AWS::URLSuffix",
              },
              "/",
              {
                "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
              },
              "/[FILENAME REMOVED]",
            ],
          ],
        },
      },
      "Type": "AWS::CloudFormation::Stack",
      "UpdateReplacePolicy": "Delete",
    },
    "GameNestedStackGameNestedStackResource8CB64513": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Parameters": {
          "referencetobattlecardgameAuthNestedStackAuthNestedStackResource1DBFEE78OutputsbattlecardgameAuthAuthUserPool0B3BBFCFRef": {
            "Fn::GetAtt": [
              "AuthNestedStackAuthNestedStackResource7067002B",
              "Outputs.battlecardgameAuthAuthUserPool0B3BBFCFRef",
            ],
          },
          "referencetobattlecardgameBaseNestedStackBaseNestedStackResource1E789958OutputsbattlecardgameBaseEventBus8587C82FArn": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.battlecardgameBaseEventBus8587C82FArn",
            ],
          },
          "referencetobattlecardgameBaseNestedStackBaseNestedStackResource1E789958OutputsbattlecardgameBaseEventBus8587C82FRef": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.battlecardgameBaseEventBus8587C82FRef",
            ],
          },
          "referencetobattlecardgameBaseNestedStackBaseNestedStackResource1E789958OutputsbattlecardgameBaseTable94EF26D2Arn": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.battlecardgameBaseTable94EF26D2Arn",
            ],
          },
          "referencetobattlecardgameBaseNestedStackBaseNestedStackResource1E789958OutputsbattlecardgameBaseTable94EF26D2Ref": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.battlecardgameBaseTable94EF26D2Ref",
            ],
          },
        },
        "Tags": [
          {
            "Key": "Project",
            "Value": "battle-card-game",
          },
        ],
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.",
              {
                "Ref": "AWS::Region",
              },
              ".",
              {
                "Ref": "AWS::URLSuffix",
              },
              "/",
              {
                "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
              },
              "/[FILENAME REMOVED]",
            ],
          ],
        },
      },
      "Type": "AWS::CloudFormation::Stack",
      "UpdateReplacePolicy": "Delete",
    },
    "NotificationApiNestedStackNotificationApiNestedStackResource2E9CC549": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Parameters": {
          "referencetobattlecardgameAuthNestedStackAuthNestedStackResource1DBFEE78OutputsbattlecardgameAuthAuthUserPool0B3BBFCFRef": {
            "Fn::GetAtt": [
              "AuthNestedStackAuthNestedStackResource7067002B",
              "Outputs.battlecardgameAuthAuthUserPool0B3BBFCFRef",
            ],
          },
          "referencetobattlecardgameBaseNestedStackBaseNestedStackResource1E789958OutputsbattlecardgameBaseTable94EF26D2Arn": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.battlecardgameBaseTable94EF26D2Arn",
            ],
          },
          "referencetobattlecardgameBaseNestedStackBaseNestedStackResource1E789958OutputsbattlecardgameBaseTable94EF26D2Ref": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.battlecardgameBaseTable94EF26D2Ref",
            ],
          },
        },
        "Tags": [
          {
            "Key": "Project",
            "Value": "battle-card-game",
          },
        ],
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.",
              {
                "Ref": "AWS::Region",
              },
              ".",
              {
                "Ref": "AWS::URLSuffix",
              },
              "/",
              {
                "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
              },
              "/[FILENAME REMOVED]",
            ],
          ],
        },
      },
      "Type": "AWS::CloudFormation::Stack",
      "UpdateReplacePolicy": "Delete",
    },
    "NotificationNestedStackNotificationNestedStackResourceF21A29FE": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "Parameters": {
          "referencetobattlecardgameApiNestedStackApiNestedStackResource43E0A1E6OutputsbattlecardgameApiMergedGraphqlApi94945C26ApiId": {
            "Fn::GetAtt": [
              "ApiNestedStackApiNestedStackResourceD6AA1271",
              "Outputs.battlecardgameApiMergedGraphqlApi94945C26ApiId",
            ],
          },
          "referencetobattlecardgameBaseNestedStackBaseNestedStackResource1E789958OutputsbattlecardgameBaseEventBus8587C82FRef": {
            "Fn::GetAtt": [
              "BaseNestedStackBaseNestedStackResourceAA4BD9B7",
              "Outputs.battlecardgameBaseEventBus8587C82FRef",
            ],
          },
        },
        "Tags": [
          {
            "Key": "Project",
            "Value": "battle-card-game",
          },
        ],
        "TemplateURL": {
          "Fn::Join": [
            "",
            [
              "https://s3.",
              {
                "Ref": "AWS::Region",
              },
              ".",
              {
                "Ref": "AWS::URLSuffix",
              },
              "/",
              {
                "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
              },
              "/[FILENAME REMOVED]",
            ],
          ],
        },
      },
      "Type": "AWS::CloudFormation::Stack",
      "UpdateReplacePolicy": "Delete",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`BattleCardGame GitHub OIDC > Test stack (custom) 1`] = `
{
  "Mappings": {
    "LatestNodeRuntimeMap": {
      "af-south-1": {
        "value": "nodejs20.x",
      },
      "ap-east-1": {
        "value": "nodejs20.x",
      },
      "ap-northeast-1": {
        "value": "nodejs20.x",
      },
      "ap-northeast-2": {
        "value": "nodejs20.x",
      },
      "ap-northeast-3": {
        "value": "nodejs20.x",
      },
      "ap-south-1": {
        "value": "nodejs20.x",
      },
      "ap-south-2": {
        "value": "nodejs20.x",
      },
      "ap-southeast-1": {
        "value": "nodejs20.x",
      },
      "ap-southeast-2": {
        "value": "nodejs20.x",
      },
      "ap-southeast-3": {
        "value": "nodejs20.x",
      },
      "ap-southeast-4": {
        "value": "nodejs20.x",
      },
      "ap-southeast-5": {
        "value": "nodejs20.x",
      },
      "ap-southeast-7": {
        "value": "nodejs20.x",
      },
      "ca-central-1": {
        "value": "nodejs20.x",
      },
      "ca-west-1": {
        "value": "nodejs20.x",
      },
      "cn-north-1": {
        "value": "nodejs18.x",
      },
      "cn-northwest-1": {
        "value": "nodejs18.x",
      },
      "eu-central-1": {
        "value": "nodejs20.x",
      },
      "eu-central-2": {
        "value": "nodejs20.x",
      },
      "eu-isoe-west-1": {
        "value": "nodejs18.x",
      },
      "eu-north-1": {
        "value": "nodejs20.x",
      },
      "eu-south-1": {
        "value": "nodejs20.x",
      },
      "eu-south-2": {
        "value": "nodejs20.x",
      },
      "eu-west-1": {
        "value": "nodejs20.x",
      },
      "eu-west-2": {
        "value": "nodejs20.x",
      },
      "eu-west-3": {
        "value": "nodejs20.x",
      },
      "il-central-1": {
        "value": "nodejs20.x",
      },
      "me-central-1": {
        "value": "nodejs20.x",
      },
      "me-south-1": {
        "value": "nodejs20.x",
      },
      "mx-central-1": {
        "value": "nodejs20.x",
      },
      "sa-east-1": {
        "value": "nodejs20.x",
      },
      "us-east-1": {
        "value": "nodejs20.x",
      },
      "us-east-2": {
        "value": "nodejs20.x",
      },
      "us-gov-east-1": {
        "value": "nodejs18.x",
      },
      "us-gov-west-1": {
        "value": "nodejs18.x",
      },
      "us-iso-east-1": {
        "value": "nodejs18.x",
      },
      "us-iso-west-1": {
        "value": "nodejs18.x",
      },
      "us-isob-east-1": {
        "value": "nodejs18.x",
      },
      "us-west-1": {
        "value": "nodejs20.x",
      },
      "us-west-2": {
        "value": "nodejs20.x",
      },
    },
  },
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "CustomAWSCDKOpenIdConnectProviderCustomResourceProviderHandlerF2C543E0": {
      "DependsOn": [
        "CustomAWSCDKOpenIdConnectProviderCustomResourceProviderRole517FED65",
      ],
      "Properties": {
        "Code": {
          "S3Bucket": {
            "Fn::Sub": "cdk-hnb659fds-assets-\${AWS::AccountId}-\${AWS::Region}",
          },
          "S3Key": "[FILENAME REMOVED]",
        },
        "Handler": "__entrypoint__.handler",
        "MemorySize": 128,
        "Role": {
          "Fn::GetAtt": [
            "CustomAWSCDKOpenIdConnectProviderCustomResourceProviderRole517FED65",
            "Arn",
          ],
        },
        "Runtime": {
          "Fn::FindInMap": [
            "LatestNodeRuntimeMap",
            {
              "Ref": "AWS::Region",
            },
            "value",
          ],
        },
        "Timeout": 900,
      },
      "Type": "AWS::Lambda::Function",
    },
    "CustomAWSCDKOpenIdConnectProviderCustomResourceProviderRole517FED65": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": [
          {
            "Fn::Sub": "arn:\${AWS::Partition}:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
          },
        ],
        "Policies": [
          {
            "PolicyDocument": {
              "Statement": [
                {
                  "Action": [
                    "iam:CreateOpenIDConnectProvider",
                    "iam:DeleteOpenIDConnectProvider",
                    "iam:UpdateOpenIDConnectProviderThumbprint",
                    "iam:AddClientIDToOpenIDConnectProvider",
                    "iam:RemoveClientIDFromOpenIDConnectProvider",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "Inline",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "DeployRole885297C3": {
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRoleWithWebIdentity",
              "Condition": {
                "StringEquals": {
                  "token.actions.githubusercontent.com:aud": "sts.amazonaws.com",
                },
                "StringLike": {
                  "token.actions.githubusercontent.com:sub": "repo:owner/repo:*",
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Federated": {
                  "Ref": "GithubProvider1CDE27EB",
                },
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "GitHub Actions CDK deploy role for custom-project-dev",
        "ManagedPolicyArns": [
          {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/AdministratorAccess",
              ],
            ],
          },
        ],
        "MaxSessionDuration": 3600,
        "RoleName": "github-actions-role",
        "Tags": [
          {
            "Key": "Project",
            "Value": "custom-project-dev",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "GithubProvider1CDE27EB": {
      "DeletionPolicy": "Delete",
      "Properties": {
        "ClientIDList": [
          "sts.amazonaws.com",
        ],
        "CodeHash": "2926656cdb97b26d98f8b957b0d3f7326b458679745f2817e50333a21767350c",
        "ServiceToken": {
          "Fn::GetAtt": [
            "CustomAWSCDKOpenIdConnectProviderCustomResourceProviderHandlerF2C543E0",
            "Arn",
          ],
        },
        "Url": "https://token.actions.githubusercontent.com",
      },
      "Type": "Custom::AWSCDKOpenIdConnectProvider",
      "UpdateReplacePolicy": "Delete",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
